[package]
name = "fimu-pv251-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biodivine-lib-param-bn = "0.2.0"
biodivine-lib-bdd = "0.3.0"
kiss3d = "0.32.0"
nalgebra = "0.29"
petgraph = "0.6.0"
